methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:5: error: not found: value getcouleurSol
            if(getcouleurSol()== "Color.green"){return true};
               ^