methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    if(estFaceMur()){return false};
  	else{ avance()
  					if(getcouleurSol()== "Color.green"){return true};
        			else{return false}}}


while (0==0){if(isFacingTrail()){avance()};else{droite()}}
	